certificate-fintrack/fintrack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintrack
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-fintrack"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - fintrack.kbaenak.tech
    - api-fintrack.kbaenak.tech
    # - api.fintrack.dev
    secretName: app-tls
  rules:
    # DNS UI
    - host: www.fintrack.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintrack-ui
                port:
                  number: 1080
    # DNS UI
    - host: fintrack.kbaenak.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintrack-ui
                port:
                  number: 1080

    # Sophat's web testing
    - host: web.seiha.lol
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintrack-ui-testing
                port:
                  number: 1081

    # DNS API
    - host: api-fintrack.kbaenak.tech
      http:
        paths:

          # Authentication-Service
          - pathType: Prefix
            path: "/fintrack-authentication-service"
            backend:
              service:
                name: fintrack-authentication-service
                port:
                  number: 8081

          # Client-Event-Service
          - pathType: Prefix
            path: "/fintrack-client-event-service"
            backend:
              service:
                name: fintrack-client-event-service
                port:
                  number: 8088

          # Web-Push-Service
          - pathType: Prefix
            path: "/fintrack-web-push-service"
            backend:
              service:
                name: fintrack-web-push-service
                port:
                  number: 8084

          # Scheduler
          - pathType: Prefix
            path: "/fintrack-scheduler-service"
            backend:
              service:
                name: fintrack-scheduler-service
                port:
                  number: 8086

          # Telegram 
          - pathType: Prefix
            path: "/fintrack-telegram-service"
            backend:
              service:
                name: fintrack-telegram-service
                port:
                  number: 8082

          # Email KB
          - pathType: Prefix
            path: "/fintrack-email-kb-service"
            backend:
              service:
                name: fintrack-email-kb-service
                port:
                  number: 8085
                  
          # Notification
          - pathType: Prefix
            path: "/fintrack-notification-service"
            backend:
              service:
                name: fintrack-notification-service
                port:
                  number: 8087
          # Aos
          - pathType: Prefix
            path: "/fintrack-aos-service"
            backend:
              service:
                name: fintrack-aos-service
                port:
                  number: 8181
          # Ios
          - pathType: Prefix
            path: "/fintrack-ios-service"
            backend:
              service:
                name: fintrack-ios-service
                port:
                  number: 8180
